k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        name: xpad-bko
        namespace: gigxpad-prod
    name: xpad-bko
    #annotations:
    #service.beta.kubernetes.io/aws-load-balancer-type: external
    #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    #service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
    ports:
        - port: 3000
          targetPort: 3000
          protocol: TCP
    type: ClusterIP
    selector:
        app: xpad-bko
